@@ -5,13 +5,11 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.File;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.LocalDate;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.io.TempDir;
@@ -48,14 +46,17 @@ class IterativeExpressionCalculatorSpecialTypesTest {
         variables.put("endDate", LocalDate.of(2024, 1, 2));
         variables.put("alpha", "alpha");
         variables.put("beta", "beta");
-        variables.put("items", List.of(1, 2));
+        variables.put("items", Arrays.asList(1, 2));
         variables.put("emptyItems", Collections.emptyList());
-        variables.put("metadata", Map.of("k", "v"));
+
+        Map<String, String> metadata = new HashMap<>();
+        metadata.put("k", "v");
+        variables.put("metadata", metadata);
         variables.put("emptyMetadata", Collections.emptyMap());
         variables.put("nullable", null);
 
         Path existingPath = tempDir.resolve("exists.txt");
-        Files.writeString(existingPath, "ok");
+        Files.write(existingPath, "ok".getBytes(StandardCharsets.UTF_8));
         variables.put("existingFile", existingPath.toFile());
         variables.put("missingFile", tempDir.resolve("missing.txt").toFile());
     }
